# R-TYPE

./: .gitignore  CI.md  CMakeLists.txt  Dockerfile.builder  LUA_SYSTEMS_DOCUMENTATION.md  README.md  RFC.txt  Username.txt  imgui.ini  lua_collision_system.lua  push_school.sh  vcpkg.json
.github/workflows/: ci.yml  sync-school.yml
Client/: CMakeLists.txt
Client/AudioPlayers/: CMakeLists.txt
Client/AudioPlayers/Raylib/: CMakeLists.txt  Raylib.cpp  Raylib.hpp
Client/AudioPlayers/SDL/: CMakeLists.txt  SDL.cpp  SDL.hpp
Client/AudioPlayers/SFML/: CMakeLists.txt  SFML.cpp  SFML.hpp
Client/Renderers/: CMakeLists.txt
Client/Renderers/Raylib/: CMakeLists.txt  Raylib.cpp  Raylib.hpp
Client/Renderers/SDL/: CMakeLists.txt  SDL.cpp  SDL.hpp
Client/Renderers/SFML/: CMakeLists.txt  SFML.cpp  SFML.hpp
Client/include/: Button.hpp  Collision.hpp  ControlsConfig.hpp  EditorState.hpp  ErrorServer.hpp  GameTypes.hpp  Launch.hpp  Leaderboard.hpp  Lobby.hpp  Locker.hpp  Menu.hpp  ParamButton.hpp  Parameters.hpp  ParticleSystem.hpp  Player.hpp  Username.hpp
Client/include/Renderers/: Citro2D.hpp  SFML.hpp
Client/include/editor/: Command.hpp  CommandStack.hpp  ComponentRegistry.hpp  EditorDocument.hpp  EditorLayout.hpp  EditorSelection.hpp  EditorState.hpp  EditorUI.hpp  PrefabCatalog.hpp
Client/include/editor/panels/: InspectorPanel.hpp  OutlinerPanel.hpp  PalettePanel.hpp  TriggerPanel.hpp  WavePanel.hpp
Client/include/net/: NetworkClient.hpp  Protocol.hpp
Client/src/: Button.cpp  ControlsConfig.cpp  EditorState.cpp  ErrorServer.cpp  GameTypes.cpp  Launch.cpp  Leaderboard.cpp  Lobby.cpp  Locker.cpp  Menu.cpp  ParamButton.cpp  Parameters.cpp  ParticleSystem.cpp  Player.cpp  Username.cpp  main.cpp
Client/src/Renderers/: Citro2D.cpp  SFML.cpp
Client/src/editor/: Command.cpp  CommandStack.cpp  ComponentRegistry.cpp  EditorDocument.cpp  EditorLayout.cpp  EditorSelection.cpp  EditorState.cpp  EditorUI.cpp  PrefabCatalog.cpp
Client/src/editor/panels/: InspectorPanel.cpp  OutlinerPanel.cpp  PalettePanel.cpp  TriggerPanel.cpp  WavePanel.cpp
Client/src/net/: NetworkClient.cpp  Protocol.cpp
LuaLoader/: CMakeLists.txt  LuaLoader.cpp  LuaLoader.hpp
PhysicsEngines/: CMakeLists.txt
PhysicsEngines/Box2D/: Box2D.cpp  Box2D.hpp  CMakeLists.txt
Server/: CMakeLists.txt
Server/include/: Server.hpp
Server/src/: Server.cpp  main.cpp
Server/src/net/: ClientSession.hpp  Protocol.cpp  Protocol.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp  UdpServer.cpp  UdpServer.hpp
Server/src/util/: Log.cpp  Log.hpp
assets/: r-typesheet1.t3s  r-typesheet7.t3s  space_background.t3s  vaisseaux.t3s
assets/editor/: layout.json
assets/editor/prefabs/: enemy_basic.prefab.json  (+1 more)
assets/levels/: test.level.json
ci/: build.sh  build_3ds.sh  build_raylib.sh  build_sdl.sh  check_clang_format.sh  install_deps.sh  test.sh
cmake-support/: DevkitArm3DS.cmake  FindCITRO2D.cmake  FindCITRO3D.cmake  Tools3DS.cmake
docs/: R-TYPE_Documentation_Projet_v2.docx  index.html
docs/api/: AudioPlayer_8hpp.html  AudioPlayer_8hpp.js  AudioPlayer_8hpp__dep__incl.map  AudioPlayer_8hpp__dep__incl.md5  AudioPlayer_8hpp__incl.map  AudioPlayer_8hpp__incl.md5  AudioPlayer_8hpp_source.html  AudioPlayers_2SFML_2SFML_8cpp.html  AudioPlayers_2SFML_2SFML_8cpp.js  AudioPlayers_2SFML_2SFML_8cpp__incl.map  AudioPlayers_2SFML_2SFML_8cpp__incl.md5  AudioPlayers_2SFML_2SFML_8cpp_source.html  AudioPlayers_2SFML_2SFML_8hpp.html  AudioPlayers_2SFML_2SFML_8hpp.js  AudioPlayers_2SFML_2SFML_8hpp__dep__incl.map  AudioPlayers_2SFML_2SFML_8hpp__dep__incl.md5  AudioPlayers_2SFML_2SFML_8hpp__incl.map  AudioPlayers_2SFML_2SFML_8hpp__incl.md5  AudioPlayers_2SFML_2SFML_8hpp_source.html  Button_8cpp.html  Button_8cpp__incl.map  Button_8cpp__incl.md5  Button_8cpp_source.html  Button_8hpp.html  Button_8hpp__dep__incl.map  Button_8hpp__dep__incl.md5  Button_8hpp__incl.map  Button_8hpp__incl.md5  Button_8hpp_source.html  ClientSession_8hpp.html  ClientSession_8hpp.js  ClientSession_8hpp__dep__incl.map  ClientSession_8hpp__dep__incl.md5  ClientSession_8hpp__incl.map  ClientSession_8hpp__incl.md5  ClientSession_8hpp_source.html  Client_2include_2net_2Protocol_8hpp.html  Client_2include_2net_2Protocol_8hpp.js  Client_2include_2net_2Protocol_8hpp__dep__incl.map  Client_2include_2net_2Protocol_8hpp__dep__incl.md5  (+2019 more)
include_common/: AudioPlayer.hpp  ComponentArray.hpp  ComponentManager.hpp  ComponentRegistry.hpp  DLLoader.hpp  Entity.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  LuaLoader.hpp  Mediator.hpp  NetworkManager.hpp  PhysicsEngine.hpp  Renderer.hpp  System.hpp  SystemManager.hpp  Utils.hpp  dlfcn_compat.hpp
include_common/Components/: Animation.hpp  EnemyInfo.hpp  GameState.hpp  Gravity.hpp  Hitbox.hpp  LevelInfo.hpp  PlayerInfo.hpp  RigidBody.hpp  ShootingCooldown.hpp  Sound.hpp  Sprite.hpp  StarField.hpp  Transform.hpp
include_common/Systems/: Animate.hpp  BrickBreaking.hpp  Collision.hpp  DevConsole.hpp  Enemy.hpp  PaddleControl.hpp  Physics.hpp  PhysicsNoEngine.hpp  PhysicsUsingEngine.hpp  PlayerControl.hpp  Render.hpp  SoundPlayer.hpp  StarField.hpp
include_common/level/: Level.hpp
libengine/: CMakeLists.txt
libengine/include/: ComponentArray.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  Mediator.hpp  System.hpp  SystemManager.hpp  Utils.hpp
libengine/include/components/: Gravity.hpp  RigidBody.hpp  Transform.hpp
libengine/src/: ComponentArray.cpp  ComponentManager.cpp  EntityManager.cpp  LuaLoader.cpp  Mediator.cpp  NetworkManager.cpp  SystemManager.cpp  main.cpp
libengine/src/level/: LevelIO.cpp  LevelIO.hpp
lua_scripts/: lua_collision_system.lua
physics_example/: CMakeLists.txt
physics_example/include/: Server.hpp
physics_example/src/: Server.cpp  main.cpp
romfs/: r-typesheet1.d  r-typesheet1.t3x  r-typesheet1_t3x.h  r-typesheet7.d  r-typesheet7.t3x  r-typesheet7_t3x.h  vaisseaux.d  vaisseaux.t3x  vaisseaux_t3x.h
romfs/gfx/: r-typesheet1.d  r-typesheet1.t3x  r-typesheet1_t3x.h  r-typesheet7.d  r-typesheet7.t3x  r-typesheet7_t3x.h  vaisseaux.d  vaisseaux.t3x  vaisseaux_t3x.h
(+160 files in other folders)
