file(GLOB PHYSICSENGINE_DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
list(FILTER PHYSICSENGINE_DIRS INCLUDE REGEX "^[A-Za-z0-9_]+$")
set(PHYSICSENGINE "Box2D" CACHE STRING "Choose PHYSICSENGINE: ${PHYSICSENGINE_DIRS}")
set_property(CACHE PHYSICSENGINE PROPERTY STRINGS ${PHYSICSENGINE_DIRS})

set(PHYSICSENGINE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${PHYSICSENGINE}")
if(EXISTS "${PHYSICSENGINE_DIR}/CMakeLists.txt")
	add_subdirectory(${PHYSICSENGINE})
else()
	message(STATUS "PHYSICSENGINE subdirectory '${PHYSICSENGINE_DIR}' does not exist. Skipping PHYSICSENGINE build.")
endif()
